# png-codec-cpp

./: CMakeLists.txt  README.md  fpng.patch
.github/workflows/: windows-latest.yml
headers/png-codec-cpp/: png.h
sources/: png.cc
